--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/72498f28e9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
